--- a/reference.html
+++ b/reference.html
@@ -26,22 +26,22 @@
 		<h1>References and Resources for mindful eating</h1>
 	</header>
 	<div class='main'>
-	</br>
+	<br>
 	<h3>Websites</h3>
-	</br>
+	<br>
 	<a href='https://www.eatthis.com/mindful-eating-techniques/'>eatthis.com's mindful eating tips</a>
-	</br>
+	<br>
 	<a href='https://www.helpguide.org/articles/diets/mindful-eating.htm#:~:text=Mindful%20eating%20is%20maintaining%20an,taste%2C%20satisfaction%2C%20and%20fullness.&text=Mindful%20eating%20is%20the%20opposite,of%20unhealthy%20%E2%80%9Cmindless%E2%80%9D%20eating.'>a general guide for mindful eating</a>
-	</br>
+	<br>
 	<a href='https://movara.com/2015/12/08/7-types-of-eaters-what-type-are-you'>a blog describing types of eaters</a>
-	</br>
+	<br>
 	<a href='https://amihungry.com/mindful-eating-resources/about-the-mindful-eating-cycle'>Am I Hungry? -- The Mindful Eating Cycle (super helpful!)</a>
-	</br>
+	<br>
 	<a href='https://amihungry.com/eating-cycle-assessment'>Test youself: EATING CYCLE ASSESSMENT</a>
-	</br>
-	</br>
+	<br>
+	<br>
 	<h3>Other Resources for getting help</h3>
-	</br>
+	<br>
 	<p>8 Steps to Mindful Eating – How to truly pay attention to the food you eat. (Harvard Health Publishing)</p>
 	<p>Introduction to Mindful Eating – What it is, the benefits, and how to start. (The Center for Mindful Eating)</p>
 	<p>Also, there is some resources from the Center for Mindful Eating (unverified): Starting a Mindful Eating Practice for those wishing to learn more starting a mindful eating practice
@@ -52,10 +52,10 @@
 	Download our Principles of Mindful Eating handout
 	More resources for anyone in a professional role who wishes to begin or maintain a mindful eating practice personally or with clients is available in the Professional Resources section.
 	Everyone is encouraged to find their community and learn more about all of the benefits of TCME membership.</p>
-	</br>
+	<br>
 	<h3>These may help mindful eating fit in your everyday life</h3>
-	</br>
-	<p>Podcast: Ram Dass is joined by a young Joseph Goldstein and Jack Kornfield for a meaningful talk about mindfulness and food: <a href="Ram Dass is joined by a young Joseph Goldstein and Jack Kornfield for a meaningful talk about mindfulness and food.">link</a></p>
+	<br>
+	<p>Podcast: Ram Dass is joined by a young Joseph Goldstein and Jack Kornfield for a meaningful talk about mindfulness and food: <a href="https://www.ramdass.org/ep-104-mindfulness-food/">link</a></p>
 	<p>Book: Mindful Eating: A Guide to Rediscovering a Healthy and Joyful Relationship with Food by Jan Chozen Bays, MD</p>
 	<p>Book: Savor: Mindful Eating, Mindful Life by Thich Nhat Hahn</p>
 	<p>Book: Eating the Moment: 141 Mindful Practices to Overcome Overeating One Meal at a Time by Pavel G. Somov</p>
